kotlin-parser/src/test/semlang/validatorTests/fail/naturalLiteral2.sem
function myStuff.myFunction(): Natural {
  Natural."-30"
}
